# Helper

./: CMakeCache.txt  ModPE_API.md  README.md  build.gradle  gradle.properties  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle  mapping.txt  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: 263df0f15ecab8d9.js  b392920865578da2.js  manifest.json  options.txt  skins.json  用户使用协议.txt
app/src/main/java/com/fmp/: AppConfig.java  AppShortcutManager.java  FMP_DeBug.java  FMP_Toast.java  FMP_Tools.java  FMP_ZipKillerDialog.java  Logger.java  UploadHelper.java
app/src/main/jni/: Base64.cpp  Base64.h  FileUtil.cpp  JavaFileUtil.h  fmp-jni.cpp
app/src/main/jni/android/: android_log.h
app/src/main/jni/duowan/: duowan-support.cpp
app/src/main/jniLibs/armeabi-v7a/: output.json
app/src/main/res/anim/: dialog_main_hide_amination.xml  dialog_root_hide_amin.xml  dialog_root_show_amin.xml  progress_indeterminate_animation.xml  resfresh.xml  snackbar_hide_animation.xml  snackbar_show_animation.xml
app/src/main/res/animator/: add_bill_anim.xml
app/src/main/res/drawable/: auto_button.xml  auto_props_btn.xml  auto_qq_btn.xml  auto_small_btn.xml  background_button_float.xml  background_progress.xml  bmob_update_button_cancel_bg_focused.xml  bmob_update_button_cancel_bg_normal.xml  bmob_update_button_cancel_bg_selector.xml  bmob_update_button_cancel_bg_tap.xml  bmob_update_button_check_selector.xml  bmob_update_button_close_bg_selector.xml  bmob_update_button_ok_bg_focused.xml  bmob_update_button_ok_bg_normal.xml  bmob_update_button_ok_bg_selector.xml  bmob_update_button_ok_bg_tap.xml  btn_unlogin.xml  button_circle_shape.xml  ic_file_item.xml  ic_file_item_click.xml  ic_file_left.xml  ic_file_more.xml  ic_file_refresh.xml  ic_file_right.xml  ic_item_about.xml  ic_item_disclaimer.xml  ic_item_networks.xml  ic_item_settings.xml  ic_item_status.xml  ic_item_verified.xml  ic_menu_add.xml  layerlist_circle_mask.xml  lift_on_touch.xml  main_btn_start_background.xml  main_footer_tab.xml  main_footer_tab1.xml  main_footer_tab1_btn_nor.xml  main_footer_tab1_btn_pre.xml  main_footer_tab2.xml  main_footer_tab2_btn_nor.xml  (+12 more)
app/src/main/res/layout/: aboutme_include_dev.xml  aboutme_include_people.xml  activity_filelist.xml  activity_footer.xml  activity_launch.xml  activity_layout_about_me.xml  activity_layout_archive.xml  activity_layout_archive_item.xml  activity_layout_gamelobby.xml  activity_layout_login.xml  activity_layout_main.xml  activity_layout_me_info.xml  activity_layout_modmall.xml  activity_layout_notification.xml  activity_layout_plugin.xml  activity_layout_plugin_item.xml  activity_layout_seeds.xml  activity_layout_settings.xml  activity_layout_skin.xml  activity_layout_skin_item.xml  activity_layout_texture.xml  activity_layout_texture_item.xml  activity_mod_files.xml  activity_mod_files_details.xml  activity_mod_files_item.xml  app_activity_toolbar.xml  bmob_update_dialog.xml  dialog_authorinfo.xml  dialog_edit.xml  dialog_edit_plugin.xml  dialog_edit_skin.xml  dialog_edit_skin_json.xml  dialog_launcher_exception.xml  dialog_normal_ban_msg.xml  dialog_normal_device_info.xml  dialog_normal_launcher.xml  dialog_normal_sex.xml  dialog_normal_unlogin.xml  dialog_notificationl.xml  dialog_packgae.xml  (+21 more)
app/src/main/res/menu/: activity_main_menu.xml  menu_mod_mall.xml
app/src/main/res/values/: attr.xml  attributes.xml  bmob_common_strings.xml  bmob_update_string.xml  colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-night/: colors.xml  styles.xml
app/src/main/res/xml/: fmp_device_manager_policies.xml  fmp_file_paths.xml  fmp_qq_click_accessibility_config.xml  fmp_shortcuts.xml  mimetypes.xml
fmp-launcher/: CMakeLists.txt  build.gradle  proguard-rules.pro
fmp-launcher/src/main/: AndroidManifest.xml
fmp-launcher/src/main/jni/: Helper.h  fmp-launcher.cpp  fmp-launcher.h  netease-support.cpp  netease-support.h
fmp-launcher/src/main/jni/elfhook/: elfhook.cpp  elfio.cpp  elfutils.cpp
fmp-launcher/src/main/jni/mcpe/block/: Block.h  BlockGraphics.h  BlockProperty.h  BlockSoundType.h  BlockState.h  CropBlock.h
fmp-launcher/src/main/jni/mcpe/blockentity/: BlockEntity.h  BlockEntityFactory.h  BlockEntityType.h  CauldronBlockEntity.h  ChestBlockEntity.h  (+1 more)
fmp-launcher/src/main/jni/md5/: md5.cpp  md5.h  md5file.cpp  md5file.h  md5global.h
fmp-launcher/src/main/jni/minecraftpe/: Abilities.h  Actor.h  BlockLegacy.h  BlockPos.h  ClientInstance.h  CompoundTag.h  ContentIdentity.h  Difficulty.h  EntityUniqueID.h  GeneratorType.h  ItemInstance.h  ItemStack.h  ItemStackBase.h  Level.h  LevelData.h  LevelSettings.h  ListTag.h  LocalPlayer.h  Minecraft.h  MinecraftScreenModel.h  Player.h  PlayerInventoryProxy.h  StartIntent.h  Tag.h  Vec2.h  Vec3.h  minecraftpe.h
fmp-launcher/src/main/jni/netease/: Manifest.h  MobileClient.h  ReactNativeMgr.h  serverModuleUtil.h  serverlevel.h
fmp-launcher/src/main/jni/substrate/: SubstrateLog.hpp
(+339 files in other folders)
